CHANGES
*******

4.0.0 (unreleased)
==================

- Added support for continuous integration using ``tox`` and ``jenkins``.

- Got tests to run using ``setup.py test``.

- Added ``Sphinx`` documentation.

- Added ``setup.py docs`` alias (installs ``Sphinx`` and dependencies).

- Added ``setup.py dev`` alias (runs ``setup.py develop`` plus installs
  ``nose`` and ``coverage``).


3.12.1 (2012-04-02)
===================

- Wrap ``with site(foo)`` in try/finally (LP768151).


3.12.0 (2011-11-16)
===================

- Add convenience function zope.component.hooks.site (a contextmanager),
  so one can write ``with site(foo): ...``.

3.11.0 (2011-09-22)
===================

- Moved code from ``zope.component.registry`` which implements a basic
  nonperistent component registry to ``zope.interface.registry``.  This code
  was moved from ``zope.component`` into ``zope.interface`` to make porting
  systems (such as Pyramid) that rely only on a basic component registry to
  Python 3 possible without needing to port the entirety of the
  ``zope.component`` package.  Backwards compatibility import shims have been
  left behind in ``zope.component``, so this change will not break any
  existing code.

- Interfaces moved from ``zope.component.interfaces`` to
  ``zope.interface.interfaces``: ``ComponentLookupError``, ``Invalid``,
  ``IObjectEvent``, ``ObjectEvent``, ``IComponentLookup``, ``IRegistration``,
  ``IUtilityRegistration``, ``IAdapterRegistration``,
  ``ISubscriptionAdapterRegistration``, ``IHandlerRegistration``,
  ``IRegistrationEvent``, ``RegistrationEvent``, ``IRegistered``,
  ``Registered``, ``IUnregistered``, ``Unregistered``,
  ``IComponentRegistry``, and ``IComponents``.  Backwards compatibility shims
  left in place.

- Depend on zope.interface >= 3.8.0.

3.10.0 (2010-09-25)
===================

- Got rid of the docs extra and the sphinxdoc recipe.

- Created a "security" extra to move security-related dependencies out of the
  "test" extra.
