@@ -4,6 +4,10 @@ CHANGES
 4.0.0 (unreleased)
 ==================
 
+- Removed the long-deprecated ``layer`` argument to the
+  ``zope.component.zcml.view`` and ``zope.component.zcml.resource``
+  ZCML directives.
+
 - Added support for continuous integration using ``tox`` and ``jenkins``.
 
 - Got tests to run using ``setup.py test``.
